--- a/admin/secure/form.html
+++ b/admin/secure/form.html
@@ -28,6 +28,7 @@
 
                                 </table>
                                 <input type="submit" name="submit" value="Войти" id="enterButton" class="btn">
+                                <a class="btn btn-primary" href= "http://js.local" role="button" >На главную</a>
                                 <br><br>
 
 
