Migration DB to MySQL.

--- a/admin/secure/form.html
+++ b/admin/secure/form.html
@@ -27,8 +27,8 @@
                                     </tr>
 
                                 </table>
-                                <input type="submit" name="submit" value="Войти" id="enterButton" class="btn">
-                                <a class="btn btn-primary" href= "http://js.local" role="button" >На главную</a>
+                                <input type="submit" name="submit" value="Войти" id="enterButton" class="btn btn-primary">
+                                <a id="enterToMain" class="btn btn-primary" href= "http://js.local" role="button" >На главную</a>
                                 <br><br>
 
 
